fixes alignment for mobile use

--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -11,7 +11,7 @@
 .project-info {
   align-items: center;
   justify-self: center;
-  font-size: 13pt;
+  font-size: 16px;
   width: 600px;
 }
 
@@ -44,6 +44,13 @@
     display: grid;
     grid-template-columns: 1fr;
     column-gap: 100px;
+    margin: auto;
+  }
+
+  .row {
+    padding: 10px;
+    text-align: center;
+    justify-content: center;
     margin: auto;
   }
 
